--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ resume-external: true
 resume-url: https://google.com/?q=my+resume
 
 # url: https://sergiokopplin.github.io/indigo
-parent-url: http://thesmile.me
-url: https://thesmile.me/blog
+parent-url: http://smiile8888.github.io
+url: https://smiile8888.github.io/blog
 # baseurl: /blog
 
 permalink: /:title/
