--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ resume-external: true
 resume-url: https://google.com/?q=my+resume
 
 # url: https://sergiokopplin.github.io/indigo
-parent-url: http://smiile8888.github.io
+parent-url: https://smiile8888.github.io
 url: https://smiile8888.github.io/blog
 # baseurl: /blog
 
