--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ projects: true
 
 # if you don't need "about" or "blog", comment them out below
 about: false
-blog: false
+blog: true
 
 # do you want to show the "read time" of the posts?
 read-time: true
