--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
 # main text of home
 title: Smile Thanapattheerakul
-bio: A Person who travels the world eating noodles
-
 greeting: Welcome to Smile's Blog 😃
 
 # twitter summary info
-description: A blog about technology and stuff related crafted by a cybersecurity enthusiast. Some are related to personal interests made with pure pressure, or most people called passion.
+description: A blog about technology and stuff related crafted by a cybersecurity enthusiast. Some are related to personal interests made with genuine pleasure, or most people called passion.
 
 # if it's an external image, update below for true
 # better with square images
